<resources>
    <string name="app_name">kos</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="email">Email</string>
    <string name="konfimasi_password">Konfimasi Password</string>
    <string name="tambah">Tambah</string>
    <string name="disewakan">Disewakan</string>
    <string name="sewa">Sewa</string>
    <string name="nama_kos">Nama Kos</string>
    <string name="pria">Pria</string>
    <string name="wania">Wania</string>
    <string name="kamar">Kamar</string>
    <string name="campuran">Campuran</string>
    <string name="ukuran_kamar">Ukuran Kamar</string>
    <string name="guling">Guling</string>
    <string name="ac">AC</string>
    <string name="bantal">Bantal</string>
    <string name="kasur">kasur</string>
    <string name="lemari">Lemari Baju</string>
    <string name="mejabelajar">Meja Belajar</string>
    <string name="kursi">Kursi</string>
    <string name="cermin">Cermin</string>
    <string name="jendela">Jendela</string>
    <string name="ventilasi">Ventilasi</string>
    <string name="wifi">WiFi</string>
    <string name="kulkas">Kulkas</string>
    <string name="r.cuci">R. Cuci</string>
    <string name="r.jemur">R. Jemur</string>
    <string name="dapur">Dapur</string>
    <string name="cctv">CCTV</string>
    <string name="penjaga">Penjaga kos</string>
    <string name="meter">Meter</string>
    <string name="fasilitas_kamar">Fasilitas Kamar</string>
    <string name="fasilitas_umum">Fasilitas Umum</string>
    <string name="bulan">Bulan</string>
    <string name="harga_kos">Harga Kos</string>
    <string name="jumlah_kamar">Jumlah Kamar</string>
    <string name="_1000000">1000000</string>
</resources>