<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".tambah_class">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/kedua">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/todo" />

            </LinearLayout>

            <!-- nama kos -->
            <EditText
                android:layout_width="400dp"
                android:maxWidth="200dp"
                android:layout_height="48dp"
                android:hint="@string/nama_kos"
                android:autofillHints=""
                android:inputType="text"
                android:textColor="@color/black"/>

            <!-- tipe kamar -->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:background="@drawable/tambah_background"
                android:elevation="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:text="@string/kamar"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_pria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/pria"
                        android:onClick="onRadioButtonClicked"/>

                    <RadioButton
                        android:id="@+id/radio_wanita"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/wania"
                        android:onClick="onRadioButtonClicked"/>

                    <RadioButton
                        android:id="@+id/radio_campur"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/campuran"
                        android:onClick="onRadioButtonClicked"/>

                </RadioGroup>


            </LinearLayout>

            <!-- ukuran kamar -->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:background="@drawable/tambah_background"
                android:elevation="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:text="@string/ukuran_kamar"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:hint="5"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:background="@drawable/text_tambah"
                        android:autofillHints=""
                        android:inputType="number" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="X"/>

                    <EditText
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:hint="3"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:background="@drawable/text_tambah"
                        android:autofillHints=""
                        android:inputType="number" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textStyle="bold"
                        android:text="@string/meter"/>

                </LinearLayout>

            </LinearLayout>

            <!-- fasilitas kamar -->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:background="@drawable/tambah_background"
                android:elevation="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:text="@string/fasilitas_kamar"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <CheckBox

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ac"
                            android:onClick="onCheckboxClicked"/>

                        <CheckBox

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bantal"
                            android:onClick="onCheckboxClicked"/>

                        <CheckBox

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/guling"
                            android:onClick="onCheckboxClicked"/>

                        <CheckBox

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kasur"
                            android:onClick="onCheckboxClicked"/>

                        <CheckBox

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lemari"
                            android:onClick="onCheckboxClicked"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <CheckBox

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mejabelajar"
                            android:onClick="onCheckboxClicked"/>

                        <CheckBox

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kursi"
                            android:onClick="onCheckboxClicked"/>

                        <CheckBox

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cermin"
                            android:onClick="onCheckboxClicked"/>

                        <CheckBox

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jendela"
                            android:onClick="onCheckboxClicked"/>

                        <CheckBox

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ventilasi"
                            android:onClick="onCheckboxClicked"/>

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <!-- fasilitas umum -->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:background="@drawable/tambah_background"
                android:elevation="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:text="@string/fasilitas_umum"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <CheckBox

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wifi"
                            android:onClick="onCheckboxClicked"/>

                        <CheckBox

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kulkas"
                            android:onClick="onCheckboxClicked"/>

                        <CheckBox

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/r.cuci"
                            android:onClick="onCheckboxClicked"/>

                        <CheckBox

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/r.jemur"
                            android:onClick="onCheckboxClicked"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <CheckBox

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dapur"
                            android:onClick="onCheckboxClicked"/>

                        <CheckBox

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cctv"
                            android:onClick="onCheckboxClicked"/>

                        <CheckBox

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/penjaga"
                            android:onClick="onCheckboxClicked"/>

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <!-- harga kos -->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp"
                android:background="@drawable/tambah_background"
                android:elevation="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:text="@string/harga_kos"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="Rp"/>

                    <EditText
                        android:layout_width="100dp"
                        android:layout_height="48dp"
                        android:hint="1000000"
                        android:layout_marginStart="5dp"
                        android:gravity="center"
                        android:background="@drawable/text_tambah"
                        android:autofillHints=""
                        android:inputType="number" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textStyle="bold"
                        android:text="@string/bulan"/>

                </LinearLayout>

            </LinearLayout>

            <!-- no hp -->
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:text="No Hp"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <EditText
                    android:layout_width="150dp"
                    android:layout_height="48dp"
                    android:hint="085267672121"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:background="@drawable/text_tambah"
                    android:autofillHints=""
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="Tambah"/>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>