<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".register_class">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selamat_datang"
            android:textStyle="bold"
            android:textSize="40sp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@drawable/regis_background"
        android:padding="10dp">

        <EditText
            android:id="@+id/username_regis"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/username"
            android:paddingStart="10dp"
            android:background="@drawable/text_regis"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            tools:ignore="RtlSymmetry"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/email_regis"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/email"
            android:paddingStart="10dp"
            android:background="@drawable/text_regis"
            android:layout_marginBottom="20dp"
            tools:ignore="RtlSymmetry"
            android:autofillHints=""
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/password_reg"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/password"
            android:ems="10"
            android:paddingStart="10dp"
            android:background="@drawable/text_regis"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword"
            tools:ignore="RtlSymmetry"
            android:autofillHints="" />

        <EditText
            android:id="@+id/password_con"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/konfimasi_password"
            android:paddingStart="10dp"
            android:background="@drawable/text_regis"
            android:layout_marginBottom="10dp"
            tools:ignore="RtlSymmetry"
            android:autofillHints=""
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_daftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/back_regis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/kedua"
            android:backgroundTint="@color/white"/>

    </LinearLayout>

</LinearLayout>