<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_class">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/login_back"
            tools:ignore="MissingConstraints"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:background="@drawable/logo_putih"
                tools:ignore="MissingConstraints"
                android:contentDescription="@string/todo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:paddingStart="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@drawable/text_login"
                android:autofillHints="username"
                tools:ignore="RtlSymmetry"/>

            <EditText
                android:id="@+id/password_log"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:paddingStart="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/text_login"
                android:autofillHints="password"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:text="Belum punya akun?" />

                <TextView
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Register"
                    android:textColor="#2877D2" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>